--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         </header>
     </body>
     <footer>
-        email me at: <a href="mailto: fm9106@gmail.com">fm9106@gmail.com</a>
+        email me at: <a href="mailto: fm9106@gmail.com" target="_blank">fm9106@gmail.com</a>
     </footer>
 </html>
