--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <title>
-            Fiona-Home
+            isabella-Home
         </title>
     </head>
     <body>
@@ -15,16 +15,11 @@
                     </li>
                 </ul>
             </nav>
-            <pf>
-                <a href="https://bit.ly/3T4dSs2" target="_blank" ><img src="portfoliologo.jpg" alt="Koro kat logo"></a>
-                <figcaption>
-                    my portfolio
-                </figcaption>
-            </pf>
             <ttext><h1>Home</h1></ttext>
         </header>
+        
     </body>
     <footer>
-        email me at: <a href="mailto: fm9106@gmail.com" target="_blank">fm9106@gmail.com</a>
+        email me at <a href="https://bit.ly/3CPsPsD target="  target="_blank" >thejesterislaughing@gmail.com</a>
     </footer>
 </html>
