--- a/more about me.html
+++ b/more about me.html
@@ -2,27 +2,23 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <title>
-            fiona-more about me
+            isabella-more about me
         </title>
     </head>
     <body>
         <header>
             <nav>
                 <ul>
-                    <a href="index.html">Home</a>
-                    <a href="more about me.html">more about me</a>
+                    <li>
+                        <a href="index.html">Home</a>
+                        <a href="more about me.html">more about me</a>
+                    </li>
                 </ul>
             </nav>
-            <pf>
-                <a href="https://photos.google.com/share/AF1QipM2fydcEbwDfFFKmVVHcdvZYL2MQSETLFJGlk0LBDPI6sf0F82UFYVGcNrn_DQRWQ?key=UzhSbVJvZWRyaEVtdkQxSnZJX2tvMUp1c09JTEpR" target="_blank" ><img src="portfoliologo.jpg" alt="Koro kat logo"></a>
-            <figcaption>
-                my portfolio
-            </figcaption>
-            </pf>
             <ttext><h1>more about me</h1></ttext>
         </header>
     </body>
     <footer>
-        email me at: <a href="mailto: fm9106@gmail.com">fm9106@gmail.com</a>
+        email me at <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ target="  target="_blank" >thejesterislaughing@gmail.com</a>
     </footer>
 </html>
