--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         
     </body>
     <footer>
-        email me at <a href="https://bit.ly/3CPsPsD target="  target="_blank" >thejesterislaughing@gmail.com</a>
+        email me at <a href="https://bit.ly/3CsjmpU"  target="_blank" >thejesterislaughing@gmail.com</a>
     </footer>
 </html>
