Update more about me.html

--- a/more about me.html
+++ b/more about me.html
@@ -19,6 +19,6 @@
         </header>
     </body>
     <footer>
-        email me at <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ target="  target="_blank" >thejesterislaughing@gmail.com</a>
+        email me at <a href="https://bit.ly/3CsjmpU"  target="_blank" >thejesterislaughing@gmail.com</a>
     </footer>
 </html>
